[package]
name = "dsml3"
version = "1.0.0"
edition = "2021"
description = "A simple DSL for formatting documents"
authors = ["Sam Christy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.19.4", features = ["pdf", "png"] }
clap = { version = "4.5.6", features = ["derive"] }
